# rncp-validator

./: .gitignore  Calendar.py  Makefile  README.md  SchoolPeriod.py  checker.py  pyproject.toml  requirements.txt  setup.py
rncp_validator/: Calendar.py  SchoolPeriod.py  __init__.py  __main__.py  checker.py  tools.py  validator.py
