[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rncp-validator"
version = "0.0.1"
description = "Simple checker usefull to test if you hav pushed during your school period."
authors = [
  { name = "Nolan Skiba and Leo Farina" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rncp-validator"]
force_sort_within_sections = true